# ai-bootcamp-codespace

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
01-foundation/02-rag/: openai.ipynb  rag.ipynb
01-foundation/03-structured-output/: notebook.ipynb  streaming.ipynb
01-foundation/04-bonus/: vector-search.ipynb
01-foundation/05-alternatives/: 03-groq-models.py  anthropic.ipynb  bedrock.ipynb  chat-completions.ipynb  gemini.ipynb  grok.ipynb  groq.ipynb  intro.ipynb  rag.py  starter.ipynb  zai.ipynb
02-rag-usecases-tech/02-faq-assistant/: notebook.ipynb
02-rag-usecases-tech/03-youtube/: notebook.ipynb  subtitles_r0gHbW_MmaQ.txt  youtube-rag.ipynb
02-rag-usecases-tech/04-math-book/: .gitignore  extraction-clean.ipynb  models.py  page-text-extraction.ipynb  pricing.py  rag-persistent-query.ipynb  rag-persistent.ipynb  rag.ipynb
03-agents/02-agent-basics/: basics-intro.ipynb  qna-loop.ipynb  structured_output.ipynb
03-agents/03-agent-frameworks/: pydantic-ai.ipynb
03-agents/04-web-research/: brave-search.ipynb  openai_web_seach_pydantic.ipynb  openai_web_search.ipynb  search_tools.ipynb  search_tools.py  youtube-search.ipynb
03-agents/05-openai-alternatives/: agent-library.ipynb  agent_anthropic.py  agent_chat_completions.py  agent_gemini.py  agent_lib.py  agent_responses.py  anthropic.ipynb  chat-completions.ipynb  common.py  gemini.ipynb  search_tools.py  starter-responess.ipynb
04-testing/multi-agent/: agents_as_tools.py  common.py  dynamic_evaluator.py  dynamic_plan_execute.py  fixed_evaluator.py  github_tools.py  handoffs.py  human_in_the_loop.py  multi_agent_collaboration.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  (+3 more)
data_cache/: download-youtube-videos.ipynb
documentation-agent/: .gitignore  Makefile  app.py  cost_tracker.py  doc_agent.py  main.py  models.py  otel_test.py  pyproject.toml  refactoring-plan.md  tools.py
documentation-agent/evals/: README.md  eval_judge.ipynb  evals_run_2026_03_06.json  evals_run_2026_03_06_results_evaluated.csv  evals_run_2026_03_16_synthetic.json  evals_run_2026_03_16_synthetic_judged.json  evaluate_judge.py  explore_judge_results.py  label_evals.py  llm_judge.py  llm_judge_checks.py  questions_generated.csv  run_evals.py  run_evals_synthetic.py  run_judge_checks.py  utils.py
documentation-agent/evals/manual/: app.py  create_eval_data.ipynb  judge.py  run.py  run_judge.py
documentation-agent/evals/manual/data/: evals_run_2026_03_06_results.json  questions.csv
documentation-agent/evals/synthetic/: app.py  judge.py  run.py  run_judge.py  synthetic_data_gen.ipynb
documentation-agent/evals/synthetic/data/: evals_run_2026_03_16_synthetic.json  evals_run_2026_03_16_synthetic_judged.json  evals_run_2026_03_19_synthetic.json  judge_accuracy_analysis.csv  questions_generated.csv
documentation-agent/notebooks/: logfire_data_export.ipynb
documentation-agent/tests/: conftest.py  cost_tracker.py  judge.py  test_agent.py  test_judge.py  utils.py
documentation-agent/trace_replay/: README.md  __init__.py  converter.py  test_converter.py
homework/: week3_Wikipedia.ipynb
week1/: docs.ipynb  elastic-search.ipynb  env-test-introduction.ipynb  env-test.ipynb  homework.ipynb  intelligent-chunking.ipynb  qdrant.ipynb  rag.ipynb  rag.py  youtube.ipynb
week2/: agents-beyond-rag.ipynb  agents-intro.ipynb  agents-sdk.ipynb  agents-toyaikit.ipynb  pydantic-ai-deep-research.ipynb  pydantic-ai-intro.ipynb
week3/code/: .gitignore  main.py  pyproject.toml  search_agent.py  search_tools.py
week3/code/evals/: INSPECTOR_GUIDE.md  README.md  eval_agent_judge.py  eval_agent_run.py  eval_common.py  eval_orchestrator.py  generate_data.py  ground_truth_evidently.csv  gt-sample.csv  inspect_eval_results.py  inspect_ground_truth.py  sample_ground_truth.py
week3/code/notebooks/: chunking.ipynb  evaluations-agent-run.ipynb  evaluations-judge.ipynb  evidently-docs-test.ipynb  evidently.ipynb  ground-truth.ipynb  retrieval-evaluation.ipynb
week3/code/tests/: _test_agent_scenario.py  conftest.py  patch_agent.py  test_agent.py  test_agent_judge.py  utils.py
week4/code/: .gitignore  docker-compose.yml  message.json  monitoring.db  pyproject.toml  streaming_parsing.py  ver2.py  ver4.py
week4/code/monitoring/: README.md  __init__.py  app.py  db.py  evaluator.py  fake_data.py  feedback.py  parser.py  runner.py  schemas.py  sources.py
week4/code/monitoring/grafana/dashboards/: eval.json  feedback.json  overview.json
(+670 files in other folders)
