[project]
name = "ai-bootcamp-codespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.15.0",
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "markitdown[pdf]>=0.1.4",
    "minsearch>=0.0.7",
    "openai-agents==0.5.0",
    "pydantic-ai>=1.0.17",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "toyaikit==0.0.8",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.2",
]

[tool.uv.workspace]
members = [
    "week5/django_template",
]

