[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.0.7",
    "openai>=1.109.1",
    "pydantic-ai>=1.0.17",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "langwatch-scenario>=0.7.13",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "toyaikit>=0.0.5",
]
